# mcp-trajectory-evals

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
baselines/: scripted-trajectories.jsonl  scripted.json
scripts/: make_readme_chart.py
src/trajectory_evals/: __init__.py  cli.py  gate.py  mcp_client.py  report.py  run.py  spec.py  trajectory.py
src/trajectory_evals/runners/: __init__.py  anthropic_runner.py  replay.py  scripted.py
src/trajectory_evals/scoring/: __init__.py  answer.py  arguments.py  base.py  efficiency.py  grounding.py  selection.py
suites/timeseries/: suite.yaml
tests/: test_gate_and_cli.py  test_scoring.py  test_suite_run.py
